k8s_python/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: k8s-python-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
