k8s_python/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: LoadBalancer
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30001
